--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "description": "A portfolio website template that helps you showcase your work, projects and skills as a software developer",
-  "homepage": "http://parthkumar.github.io",
+  "homepage": "https://khantparthkumara.github.io",
   "version": "0.2.0",
   "license": "MIT",
   "private": true,
